# gr-bokehgui

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  README.md
.github/workflows/: withAptitude.yml
apps/: CMakeLists.txt
cmake/Modules/: bokehguiConfig.cmake
docs/: CMakeLists.txt  README.bokehgui
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: const_sink_c.py  demo_example.grc  freq_sink_c.py  freq_sink_f.py  freq_sink_f_zero_test.py  test_bokeh.grc  test_bokehgui.grc  test_freq_sink.grc  test_time_sink.grc  text_box.py  time_sink.py  time_sink_1.py  time_sink_c.py  time_sink_f.py  time_sink_f_tags.py  tutorial.grc  waterfall_sink_c.py  waterfall_sink_f.py  widgets.py
grc/: CMakeLists.txt  bokehgui.tree.yml  bokehgui_block_tree.xml  bokehgui_button.block.yml  bokehgui_checkbox.block.yml  bokehgui_checkbox.xml  bokehgui_const_sink_x.block.yml  bokehgui_const_sink_x.xml  bokehgui_dropdown.block.yml  bokehgui_freq_sink_f_proc.xml  bokehgui_freq_sink_x.block.yml  bokehgui_freq_sink_x.xml  bokehgui_label.block.yml  bokehgui_label.xml  bokehgui_num_sink_x.block.yml  bokehgui_radio_button.block.yml  bokehgui_radio_button.xml  bokehgui_range_slider.block.yml  bokehgui_range_slider.xml  bokehgui_slider.block.yml  bokehgui_slider.xml  bokehgui_textbox.block.yml  bokehgui_textbox.xml  bokehgui_time_sink_c_proc.xml  bokehgui_time_sink_f.xml  bokehgui_time_sink_f_proc.xml  bokehgui_time_sink_x.block.yml  bokehgui_time_sink_x.xml  bokehgui_vec_sink_x.block.yml  bokehgui_waterfall_sink_x.block.yml  bokehgui_waterfall_sink_x.xml
include/bokehgui/: CMakeLists.txt  api.h  base_sink.h  freq_sink_c_proc.h  freq_sink_f_proc.h  time_sink_c_proc.h  time_sink_f_proc.h  trigger_mode.h  vec_sink_c_proc.h  vec_sink_f_proc.h  waterfall_sink_c_proc.h  waterfall_sink_f_proc.h
include/gnuradio/bokehgui/: CMakeLists.txt  base_sink.h  freq_sink_c_proc.h  freq_sink_f_proc.h  time_sink_c_proc.h  time_sink_f_proc.h  trigger_mode.h  vec_sink_c_proc.h  vec_sink_f_proc.h  waterfall_sink_c_proc.h  waterfall_sink_f_proc.h
lib/: CMakeLists.txt  base_sink.cc  freq_sink_c_proc_impl.cc  freq_sink_c_proc_impl.h  freq_sink_f_proc_impl.cc  freq_sink_f_proc_impl.h  qa_bokehgui.cc  qa_bokehgui.h  test_bokehgui.cc  time_sink_c_proc_impl.cc  time_sink_c_proc_impl.h  time_sink_f_proc.cc  time_sink_f_proc_impl.cc  time_sink_f_proc_impl.h  vec_sink_c_proc_impl.cc  vec_sink_c_proc_impl.h  vec_sink_f_proc_impl.cc  vec_sink_f_proc_impl.h  waterfall_sink_c_proc_impl.cc  waterfall_sink_c_proc_impl.h  waterfall_sink_f_proc_impl.cc  waterfall_sink_f_proc_impl.h
python/: CMakeLists.txt  __init__.py  bokeh_layout.py  bokeh_plot_config.py  bokehgui_layout.py  build_utils.py  build_utils_codes.py  button.py  checkbox.py  const_sink_c.py  drop_down.py  freq_sink_c.py  freq_sink_f.py  label.py  number_sink.py  qa_const_sink_c.py  qa_freq_sink_c.py  qa_freq_sink_f.py  qa_time_sink_c.py  qa_time_sink_c_proc.py  qa_time_sink_f.py  qa_waterfall_sink_c.py  qa_waterfall_sink_f.py  radio_button.py  range_slider.py  slider.py  textbox.py  time_sink_c.py  time_sink_f.py  utils.py  vec_sink_c.py  vec_sink_f.py  waterfall_sink_c.py  waterfall_sink_f.py
python/bindings/: CMakeLists.txt  base_sink_python.cc  freq_sink_c_proc_python.cc  freq_sink_f_proc_python.cc  python_bindings.cc  time_sink_c_proc_python.cc  time_sink_f_proc_python.cc  vec_sink_c_proc_python.cc  vec_sink_f_proc_python.cc  waterfall_sink_c_proc_python.cc  waterfall_sink_f_proc_python.cc
python/bindings/docstrings/: base_sink_pydoc_template.h  freq_sink_c_proc_pydoc_template.h  freq_sink_f_proc_pydoc_template.h  time_sink_c_proc_pydoc_template.h  time_sink_f_proc_pydoc_template.h  vec_sink_c_proc_pydoc_template.h  vec_sink_f_proc_pydoc_template.h  waterfall_sink_c_proc_pydoc_template.h  waterfall_sink_f_proc_pydoc_template.h
python/plots/: __init__.py  bokehgui.py  waterfall.coffee  waterfall.py  waterfall.ts
python/scripts/: check-port.sh
swig/: CMakeLists.txt  bokehgui_swig.i
